[package]
name = "nirius"
version = "0.5.0"
description = "Utility commands for the niri wayland compositor"
homepage = "https://sr.ht/~tsdh/nirius/"
repository = "https://git.sr.ht/~tsdh/nirius"
authors = ["Tassilo Horn <tsdh@gnu.org>"]
license = "GPL-3.0+"
edition = "2024"

[dependencies]
niri-ipc = "25.8.0"
clap = { version = "4.5", features = ["derive"] }
env_logger = { version = "0.11", default-features = false, features = ["color", "auto-color", "humantime"] }  # without regex
log = "0.4"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#directories = "6.0"
#toml = "0.8"
